--- a/css/styles.css
+++ b/css/styles.css
@@ -11730,7 +11730,7 @@ img[alt] {
 }
 
 .wrapper-6URcxg {
-	background-image: url('https://wallpapercave.com/wp/wp5077168.jpg');
+	background-image: url('https://wallpapercave.com/wp/wp9371401.png');
 	width: 100%;
 	height: 100%
 }
