--- a/css/styles.css
+++ b/css/styles.css
@@ -11730,7 +11730,7 @@ img[alt] {
 }
 
 .wrapper-6URcxg {
-	background-image: url('https://wallpapercave.com/wp/wp9371401.png');
+	background-image: url('https://variety.com/wp-content/uploads/2019/06/discrod-nitro-chara.png');
 	width: 100%;
 	height: 100%
 }
