visual changes for landing

--- a/css/styles.css
+++ b/css/styles.css
@@ -11730,7 +11730,7 @@ img[alt] {
 }
 
 .wrapper-6URcxg {
-	background-image: url('https://variety.com/wp-content/uploads/2019/06/discrod-nitro-chara.png');
+	background-image: url('https://preview.redd.it/oe901qo4hth61.png?width=3840&format=png&auto=webp&s=eac9b8f429cf2d88a84ed865b6ee5493ff452dcb');
 	width: 100%;
 	height: 100%
 }
